# 2024_Arevalo_NeurIPS_MotiVE

./: README.md  compute_all_metrics_dict.py  connected.py  evaluate.py  explore.py  explore.smk  filter_rank_compounds.py  flake.nix  gnn.json  knn_baseline.py  model.py  morph_sim_annotate.py  mworkflow.py  optimize_params.py  plot.py  plot.smk  predict_all.py  pyproject.toml  query.sql  run_training.py  spectral_clust.py  train.py  train.smk  workflow.py
configs/eval/: test_evaluation_params.json
configs/optimize/: optimize_configs.csv
motive/: base.py  bpr.py  jump.py  sample_negatives.py
new_profiles/: new_profiles.py  new_profiles_center_microscope.py  new_profiles_center_modality.py  new_profiles_phenotypic_filtered.py  new_profiles_phenotypic_filtered_source_3.py  new_profiles_phenotypic_filtered_source_7.py  new_profiles_single_source.py
plot/: __init__.py  base.py  exploration.py  heatmap.py  knn_baseline.py  projection.py  waterfall.py
rules/: jump.smk
tests/: test_bpr.py
utils/: evaluate.py  utils.py
