[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.*",
    "torch-geometric>=2.6.1",
    "snakemake>=8.25.0",
    "pyarrow>=18.0.0",
    "tensorboard>=2.18.0",
    "seaborn>=0.13.2",
    "torcheval>=0.0.7",
    "copairs>=0.4.2",
    "scikit-learn>=1.5.2",
    "pyg-lib>=0.4.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "rope>=1.13.0",
    "yapf>=0.40.2",
]
