[project]
name = "motive"
version = "0.2.0"
description = "A Drug-Target Interaction Graph For Inductive Link Prediction"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "snakemake>=8.27.0",
    "pyarrow>=19.0.0",
    "tensorboard>=2.18.0",
    "seaborn>=0.13.2",
    "torcheval>=0.0.7",
    "copairs>=0.4.2",
    "scikit-learn>=1.6.1",
    "pyg-lib>=0.4.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
    "pycomplexheatmap>=1.8.1",
    "fastcluster>=1.2.6",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "rope>=1.13.0",
    "yapf>=0.40.2",
    "sqlparse>=0.5.3",
    "snakefmt>=0.10.2",
]

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.5.1+cu124.html",
]
